--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.0"
+    "react-router-dom": "^6.25.1"
   },
   "scripts": {
     "dev": "vite",
@@ -30,7 +30,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "jsdom": "^21.1.1",
     "nock": "^13.3.1",
-    "vite": "^4.3.0",
+    "tailwindcss": "^3.4.7",
+    "vite": "^4.5.3",
     "vitest": "^0.30.1"
   },
   "browserslist": {
